[project]
name = "chaostoolkit-tutorial"
description = "Common libraries for chaostoolkit machine learning"
version = "0.0.1"
authors = [ { name = "DevLearnOps" } ]
dependencies = [
    'chaostoolkit',
    'chaostoolkit-lib',
    'requests',
]

[build-system]
requires = [ "setuptools", "wheel" ]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [ "." ]
include = ["chaostutorial*"]
exclude = ["tests*"]
